testing/nginxtestingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    traefik.ingress.kuberenetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: le-prod
    traefik.ingress.kubernetes.io/service.passhostheader: "false"
  name: nginxtest
  labels:
    app: nginxtest
spec:
  rules:
    - host: home.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginxtest
                port:
                  number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
      - home.waltr.tech
      secretName: homewaltrtech-cert # < cert-manager will store the created certificate in this secret
